Changes in CompositeCPA

--- a/Dissertation/userpackages.tex
+++ b/Dissertation/userpackages.tex
@@ -1,3 +1,5 @@
+\usepackage{cancel}
+
 \usepackage{tabu, tabulary}  %таблицы с автоматически подбирающейся шириной столбцов
 \usepackage{fr-longtable}    %ради \endlasthead
 
