Value, Predicate, Lock cpas

--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -343,14 +343,14 @@ number={},
 pages={25--32},
 keywords={Boolean predicate abstraction;C programs benchmark;Cartesian predicate abstraction;abstract reachability tree;abstract successor state;arbitrary Boolean formulas;control flow graph;large block encoding;single block encoding;software model checking;software verification;symbolic representation;Boolean functions;program verification;symbol manipulation;trees (mathematics);},
 doi={10.1109/FMCAD.2009.5351147},
-ISSN={},
+ISSN={}
 }
 
 @inproceedings{Beyer10,
 author={Beyer, D. and Keremoglu, M.E. and Wendler, P.},
 booktitle={Formal Methods in Computer-Aided Design, 2010. FMCAD 2010}, 
 title={Predicate Abstraction with Adjustable-Block Encoding},
-year={2010},
+year={2010}
 }
 
 @inproceedings{Sung:2017,
