--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -36,6 +36,8 @@
 
 \newcommand{\conc}[1]{[\![ #1 ]\!]}
 \newcommand{\tconc}[2]{[\![ #1 ]\!]_{#2}}
+\newcommand{\pconc}[1]{\lfloor \! \lfloor #1 \rfloor \! \rfloor}
+\newcommand{\econc}[1]{\lvert \! \lvert #1 \rvert \! \rvert}
 
 \newcommand{\tcarrow}{\longrightarrow}
 \newcommand{\tatarrow}{\leadsto}
